Add automatic resources resolution by names for Strings and Layouts Cadabra now can generate the resource names and look up for resources based on the experiment option names

--- a/sample-android-app/src/main/res/layout/activity_main.xml
+++ b/sample-android-app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    tools:ignore="RtlHardcoded"
     tools:context=".MainActivity"
     >
     <android.support.design.widget.AppBarLayout
@@ -27,7 +28,7 @@
         android:id="@+id/fab1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|start"
+        android:layout_gravity="bottom|left"
         android:layout_margin="@dimen/fab_margin"
         app:srcCompat="@android:drawable/ic_dialog_info"
         />
@@ -43,7 +44,7 @@
         android:id="@+id/fab3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
+        android:layout_gravity="bottom|right"
         android:layout_margin="@dimen/fab_margin"
         app:srcCompat="@android:drawable/ic_dialog_info"
         />
