Add option to load config from Firebase as key:values Firebase A/B testing remote config is provided as a single value per A/B test. To support that Cadabra can not parse firebase config as the key:value map and look up for know experiment names.

--- a/sample-android-app/src/main/res/xml/remote_config_defaults.xml
+++ b/sample-android-app/src/main/res/xml/remote_config_defaults.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <defaultsMap>
     <entry>
+        <key>FirebaseKeyValueExperiment</key>
+        <value>KV1</value>
+    </entry>
+    <entry>
         <key>cadabra_experiments</key>
         <value>
             {
-                "FirebaseExperiment": "F1"
+                "FirebaseJsonExperiment": "F1"
             }
         </value>
     </entry>
